--- a/templates/cours.html
+++ b/templates/cours.html
@@ -30,8 +30,8 @@
                     <img src="   https://cdn-icons-png.flaticon.com/512/2015/2015218.png ">
                 </a>
             </div>
-            <div class="input-container"><input placeholder="ex: Dérivé, Bonheur..." id="search-input" class="input"
-                    name="text" type="text">
+            <div class="input-container input-container-cours"><input placeholder="ex: Dérivé, Bonheur..."
+                    id="search-input" class="input" name="text" type="text">
                 <button class="input-button" onclick="search()">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="svgContainer">
                         <path
@@ -39,30 +39,45 @@
                     </svg>
                 </button>
             </div>
-            <div class="header-link-container">
-                <div class="header-title-container">
-                    <h1>Cours</h1>
-                </div>
-                <div class="menu">
-                    <button class="menu-right" onclick="hide_show()"><img
-                            src="https://cdn-icons-png.flaticon.com/512/2115/2115216.png"></button>
-                </div>
-            </div>
+
+            <div class="menu">
+                <button class="menu-right" onclick="hide_show()"><img id="button-settings"
+                        src="   https://cdn-icons-png.flaticon.com/512/2115/2115216.png "></button>
         </nav>
-        <div id="settings" style="opacity: 0;">
+        <div id="settings">
             <div>
                 <p>Color</p>
-                <ul class="settings-colors">
-                    <li><button class="diagonal-button style1" onclick="style1()"></button></li>
-                    <li><button class=" diagonal-button style2" onclick="style2()"></button></li>
-                    <li><button class=" diagonal-button style3" onclick="style3()"></button></li>
-                    <li><button class="diagonal-button style4" onclick="style4()"></button></li>
-                    <li><button class=" diagonal-button style5" onclick="style5()"></button></li>
-                    <li><button class=" diagonal-button style6" onclick="style6()"></button></li>
-                    <li><button class="diagonal-button style7" onclick="style7()"></button></li>
-                    <li><button class=" diagonal-button style8" onclick="style8()"></button></li>
-                    <li><button class=" diagonal-button style9" onclick="style9()"></button></li>
+                <ul class="settings-colors" id="style_list">
+
                 </ul>
+
+                <script>
+                    fetch('../static/json/settings_color.json')
+                        .then(response => response.json())
+                        .then(data => {
+                            data.forEach(item => {
+                                const element_id = item.color_id;
+
+                                const liElement = document.createElement("li");
+
+                                const buttonElement = document.createElement("button");
+                                const class_element = "diagonal-button style" + parseInt(element_id, 10);
+                                buttonElement.className = class_element
+                                buttonElement.onclick = function () {
+                                    style_change(element_id);
+                                };
+
+                                liElement.appendChild(buttonElement);
+
+                                const ulElement = document.getElementById("style_list");
+                                ulElement.appendChild(liElement);
+
+                            });
+                        })
+                        .catch(error => {
+                            console.error('Une erreur s\'est produite lors de la lecture du fichier JSON :', error);
+                        });
+                </script>
             </div>
             <div>
                 <p>Angles</p>
