--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,10 @@
     color: var(--text-color);
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	margin: 0;
 	font-family: Arial, sans-serif;
@@ -114,12 +118,22 @@ header button img{
 	right: 0vw;
 }
 
+.matiere-header-container{
+	 display: flex;
+	 align-items: center;
+	 justify-content: space-around;
+	 width: 15%;
+}
+
+.matiere-header-container img{
+	width: 2vw;
+	height: auto;
+}
 
 /* settings */
 
 #settings{
-	opacity: 1;
-	display: block;
+	display: none;
   	flex-direction: column;
 	justify-content: space-between;
 	position: absolute;
@@ -171,45 +185,12 @@ header button img{
 	height: 2.5rem;
 	margin-block: 0rem;
 	margin-inline: 0.2rem;
-	border: solid 1px rgb(80, 76, 76);
+	border: solid 1px var(--text-color);
 }
 
-.style1{
-	background: linear-gradient(to bottom right, rgb(223, 184, 184) 50%, rgb(211, 211, 233) 50%);
+.diagonal-button-border{
+	border: solid 1px var(--text-color);
 }
-
-.style2{
-	background: linear-gradient(to bottom right, rgb(200, 200, 212) 50%,  rgb(255, 255, 255)50%);
-}
-
-.style3{
-	background: linear-gradient(to bottom right, rgb(230, 161, 116) 50%, #f2efd5 50%);
-}
-
-.style4{
-	background: linear-gradient(to bottom right, #a65861 50%, #ebd1d4 50%);
-}
-
-.style5{
-	background: linear-gradient(to bottom right, #bed1ed 50%, #ffffff 50%);
-}
-
-.style6{
-	background: linear-gradient(to bottom right, #2b2a2a 50%, #121111 50%);
-}
-
-.style7{
-	background: linear-gradient(to bottom right, #342b3b 50%, #817887 50%);
-}
-
-.style8{
-	background: linear-gradient(to bottom right, #10795d 50%, #e4edeb 50%);
-}
-
-.style9{
-	background: linear-gradient(to bottom right, #f5c9e4 50%, #f7f2f5 50%);
-}
-
 
 
 .settings-radius{
@@ -391,6 +372,12 @@ input:checked + .slider:before {
 	display: flex;
 }
 
+.input-container-cours{
+	width: 30%;
+	margin-left: -10%;
+}
+
+
 .input {
 	background: none;
 	border: none;
@@ -544,6 +531,7 @@ main{
 	opacity: 1;
 	filter: blur(0px);
 	transform: translateX(0);
+	transition: transform 1s;
 }
 
 .box-off{
@@ -609,7 +597,7 @@ main{
 	height: 10vh;
 }
 
-.div-create-container a{
+.div-create-container button{
 	text-decoration: none;
 	background-color: var(--main-color-light);
 	width: min-content;
@@ -619,13 +607,14 @@ main{
 	padding: 1vw;
 	padding-inline: 2vw;
 	border-radius: var(--main-border-radius);
+	border: none;
 }
 
-.div-create-container a:hover{
+.div-create-container button:hover{
 	background-color: var(--main-color);
 }
 
-.div-create-container a img{ 
+.div-create-container button img{ 
 	width: 3vw;
 	height: 3vw;
 	margin-left: 2vw;
@@ -876,11 +865,20 @@ audio{
 }
 
 .main-create-container h3{
-	margin-block-end: 0px;
+	margin-block-end: 5px;
 	font-size: 2em;
 	z-index: 2;
 	position: relative;
 	left: 3vw;
+	display: flex;
+	justify-content: left ;
+	align-items: center;
+	gap: 1vw;
+}
+
+.main-create-container h3 img{
+	width: 3vw;
+	height: auto;
 }
 
 .toggle-container {
@@ -948,7 +946,7 @@ audio{
 	margin-block-end: 5vh;
 	border-radius: var(--main-border-radius);
 	border: 1px solid var(--text-color);
-	padding: 2vw;
+	padding: 1vw;
 	text-align: left;
 	transition: background-color 1s;
 }
@@ -968,6 +966,7 @@ audio{
 .input-create-container div{
 	width: 75%;
 }
+
 
 
 #show-icon-proposale{
@@ -1050,7 +1049,7 @@ audio{
 }
 
 .key_word_container li button:hover{
-	background: var(--main-color-dark);
+	opacity: 0.2;
 }
 
 .key_word_container li button img{
@@ -1063,3 +1062,367 @@ audio{
     margin-block-end: 0em;
 }
 
+.add-cours{
+	width: 25%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+
+#button-add-cours{
+	background-color: var(--main-color-light);
+	border: none;
+	padding-block: 0.5vw;
+	border-radius: 5px;
+	font-size: 15px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 0.5vw;
+	width: 100%;
+}
+
+#button-add-cours:hover{
+	background-color: var(--main-color-dark);
+}
+
+#button-add-cours img{
+	width: 2vw;
+	height: auto;
+	margin-left: 0vw;
+}
+
+#list-add-cours{
+	margin-bottom: 5vh;
+	list-style: none;
+	background-color: var(--main-color);
+	border: none;
+	padding: 0.7vw;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+	font-size: 15px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	width: 100%;
+	margin-block-start: 0em;
+	opacity: 0.9;
+	padding-bottom: 2vw;
+}
+
+#list-add-cours button{
+	
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0.5vw;
+	background: transparent;
+	border: none;
+	border-top: 1px solid var(--main-color-dark);
+}
+
+#list-add-cours button div{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 10px;
+	font-size: 18px;
+}
+
+#list-add-cours button img{
+	width: 1.8vw;
+	height: auto;
+}
+
+#list-add-cours button:last-child{
+	border-bottom: 1px solid var(--main-color-dark);
+}
+
+#list-add-cours button:hover{
+	background-color: var(--main-color-light);
+}
+
+.video-create-right{
+	max-width: 40%;
+	max-height: 80vh;
+	overflow-y: scroll;
+}
+
+.video-container{
+	display: flex;
+	flex-direction:row;
+	max-height: 80vh;
+}
+
+.video-container .box-cours-elements{
+	box-shadow: 0px 0px 10px rgb(170, 170, 170) ;
+	width: 60%;
+	padding: 1vw;
+	border-radius: var(--main-border-radius);
+	height: 70vh;
+} 
+
+.video-container div #content-container{
+	width: 100%;
+}
+
+.video-container div #content-container iframe{
+	min-width: 100%;
+	height: auto;
+}
+
+
+
+.video-create-right .input-create-container{
+	width: 100%;
+	margin-block: 10px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+
+.video-create-right .input-create-container div{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.video-create-right .input-create-container .text-input-container{
+	width: 25%;
+}
+
+.video-create-right .input-create-container .input-container input{
+	width: 95%;
+}
+
+.video-create-right .input-create-container .text-input-container h4{
+	margin-inline-start: 1.33vw;
+}
+
+
+.input-create-container-texte{
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	margin-block: -5px;
+}
+
+.title-spacing{
+	margin-block: 30px;
+}
+
+.key_word_spacing{
+	margin-top: 10px;
+}
+
+.input-create-container-texte div{ 
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.input-create-container-texte .text-input-container{ 
+	width: 25%;
+}
+
+
+
+.input-create-container-texte .input-container{ 
+	width: 75%;
+}
+
+.input-texte-video{
+	min-width: 	100%;
+	overflow-y: scroll;
+	max-height: 15%;
+	cursor: all-scroll;
+}
+
+.key_word_container_created{
+	width: 90%;
+	max-height: 23vh;
+	overflow: scroll;
+	box-shadow: 0px 0px 10px rgb(170, 170, 170);
+	margin-inline: 2vw;
+	border-radius: var(--main-border-radius);
+}
+
+
+.iframe-demonstration{
+	height: 65%;
+	width: 85%;
+}
+
+
+
+  
+#custom-file-input {
+	cursor: pointer;
+	display: inline-block;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+}
+  
+
+.image-file-input{
+	width: 1.5vw;
+	height: auto;
+}
+
+.text-file-loaded{
+	margin-left: 2vw;
+}
+
+.iframe-created{
+	width: 95%;
+	height: 70%;
+}
+
+.button-choose-src-url{
+	border: none;
+	background-color: var(--main-color-light);
+	width: 4.5vw;
+	margin: 10px;
+	padding-block: 0.6vw;
+	border-radius: 50px;
+}
+  
+.button-choose-src-url:hover{
+	background-color: var(--main-color);
+}
+
+
+.custom-file-button {
+	display: inline-block;
+	border: 1px solid #ccc;
+	padding: 6px 12px;
+	background-color: #ff0000; 
+	color: #ffffff; 
+	cursor: pointer;
+}
+  
+.custom-file-button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
+  
+.custom-file-button:hover {
+	background-color: #ff4444; 
+}
+  
+.show_cours_create_left{
+	overflow-y: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.text-shadow{
+	text-shadow: 0px 0px 20px black;
+}
+
+.button-source-input{
+	background: var(--main-color-light);
+	border: none;
+	padding: 0.7vw;
+	border-radius: 5px;
+}
+
+.button-source-input:hover{
+	background: var(--main-color);
+}
+
+
+#container_choose_matiere_to_create{
+	background: var(--main-color-light);
+	box-shadow: 0px 0px 20px var(--text-color);
+	border-radius: var(--main-border-radius);
+	width: 30vw;
+	height: 50vh;
+	position: fixed;
+	z-index: 100;
+	top: 50%;
+  	left: 50%;
+	transform: translate(-50%, -50%);
+	padding-inline: 3vw;
+	padding-block: 1vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	max-height: 80%;
+	transition: background 1s;
+}
+
+#header-choice-matiere {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+}
+
+#header-choice-matiere button{
+	background: var(--main-color);
+	border: none;
+	padding: 0.5vw;
+	border-radius: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#header-choice-matiere h3{
+	text-decoration: underline;
+}
+
+#header-choice-matiere button:hover{
+	background: var(--main-color-dark);
+}
+
+#header-choice-matiere img{
+	width: 1.2vw;
+	height: auto;
+}
+
+#choose_matiere_to_create{
+	list-style: none;
+	overflow-y: scroll;
+	display: block;
+	width: 100%;
+}
+
+#choose_matiere_to_create::-webkit-scrollbar {
+    display: none;
+}
+
+#choose_matiere_to_create a{
+	display: flex;
+	padding-inline: 1vh;
+	border-bottom: 1px solid var(--text-color);
+	justify-content: space-between;
+	align-items: center;
+	text-decoration: none;
+}
+
+#choose_matiere_to_create a:first-child{
+	border-top: 1px solid var(--text-color);
+}
+
+#choose_matiere_to_create a:hover{
+	background: var(--main-color);
+	
+}
+
+#choose_matiere_to_create a img{
+	width: 2vw;
+	height: auto;
+}
